k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensetrackapi-deploy
spec:
  selector:
    matchLabels:
      app: expensetrackapi
  template:
    metadata:
      labels:
        app: expensetrackapi
    spec:
      containers:
      - name: expensetrackapi
        image: expensetrackapi
        ports:
        - containerPort: 8082
