k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expensetrackapi-service
spec:
  type: NodePort
  selector:
    app: expensetrackapi
  ports:
    - port: 8082
      targetPort: 8082
