k8s/expensetrack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensetrack-ingress
  namespace: expensetrack
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: expensetrackapi-service
                port:
                  number: 8082
            path: /
